spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ header {
     height: 50px;
     list-style-type: none;
     margin: 0;
-    padding: 20px 0 20px 0;
+    padding: 30px 0 20px 0;
     align-items: center;
 }
 #outbutton-play {
